@@ -1,6 +1,7 @@
 python-debian (0.1.23) UNRELEASED; urgency=medium
 
   * Add sha512 sums to Release and Sources (Closes: #732599).
+  * Use warnings rather than stderr in PkgRelation (Closes: #712513).
 
  -- Stuart Prescott <stuart@debian.org>  Fri, 13 Jun 2014 00:27:59 +1000
 
